--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0%;
+  padding: 0%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title {
+  background-color: #f6a410;
+  width: 100%;
+  height: 190px;
+  display: flex;
+  color: white;
+  flex-direction: column;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title input {
+  width: 400px;
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid #ebc47d;
+  font-size: 20px;
+  padding-left: 10px;
+}
+
+.title button {
+  width: 300px;
+  height: 40px;
+  margin: 20px;
+  border-radius: 5px;
+  font-size: 20px;
+  padding-left: 10px;
+  border: none;
+  color: rgb(255, 255, 255);
+  background-color: #0c8fcc;
+}
+
+.title button:hover {
+  cursor: pointer;
+  background-color: #3eabdd;
+}
+
+.display {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.display img {
+  width: 300px;
+  padding: 0%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.display h4, h3, h1 {
+  margin: 8px;
+} 
